--- a/linux/002_linux_cd__20181205.md
+++ b/linux/002_linux_cd__20181205.md
@@ -9,7 +9,7 @@ cd [-L|[-P [-e]]] [dir]
 
 ### 特殊符号代表的目录
 1. **~** 用户家目录  
-2.* **.** 当前目录或工作目录
+2. **.** 当前目录或工作目录
 3. **..** 当前目录的父目录
 4. **\-** 上次所在的工作目录
 ※ 使用pwd 命令可以查看当前目录
