--- a/linux/004_linux_pwd_20181213.md
+++ b/linux/004_linux_pwd_20181213.md
@@ -1,17 +1,35 @@
-## pwd(**p**rint name of current/**w**orking directory) 
+## pwd(**p**rint name of current/**w**orking **d**irectory) 
 打印当前工作目录
+
 ### 格式  
-pwd [OPTION]...
-### 参数说明
+pwd [OPTION]...  
+
+### 参数说明  
 * **-L** 打印PWD环境变量，即使存在软连接  
 * **-P** 忽视软连接，打印物理路径  
-* **--help** 打印帮助信息
-* **--version** 打印版本信息
+* **--help** 打印帮助信息 
+* **--version** 打印版本信息 
 
 ### 使用实例  
+1. pwd软链接路径与物理路径测试  
 
-### 注意事项  
+
+		[fish@localhost ~]$ ln -s /etc/yum.repos.d/ repo #新建软连接
+		[fish@localhost ~]$ ll
+		total 0
+		lrwxrwxrwx. 1 fish fish 17 Dec 16 19:47 repo -> /etc/yum.repos.d/
+		[fish@localhost ~]$ cd repo/
+		[fish@localhost repo]$ pwd #默认情况下为-L选项
+		/home/fish/repo
+		[fish@localhost repo]$ echo $PWD
+		/home/fish/repo
+		[fish@localhost repo]$ pwd -L #追踪软连接路径
+		/home/fish/repo
+		[fish@localhost repo]$ pwd -P #追踪物理路径
+		/etc/yum.repos.d
+
 
 ### 补充知识
+1. 输出所有的环境变量可以使用`printenv`命令，打印单个的变量可以使用`echo $PWD`或`echo ${PWD}`(PWD为变量名,此处$后面的大括号可以省略)  
 
 
